# DeCa

./: CMakeLists.txt  CN-4741.vcf  README.md  SAMRecord.cpp  SAMRecord.h  main.cpp
src/: ActivityProfile.cpp  ActivityProfile.h  ActivityProfileState.cpp  ActivityProfileState.h  AlignmentContext.cpp  AlignmentContext.h  AssemblyRegion.cpp  AssemblyRegion.h  BandPassActivityProfile.cpp  BandPassActivityProfile.h  ContigMap.cpp  ContigMap.h  IntervalUtils.cpp  IntervalUtils.h  Locatable.cpp  Locatable.h  M2ArgumentCollection.h  MathUtils.cpp  MathUtils.h  Mutect2Engine.cpp  Mutect2Engine.h  Mutect2Utils.cpp  Mutect2Utils.h  NaturalLogUtils.cpp  NaturalLogUtils.h  QualityUtils.cpp  QualityUtils.h  ReadFilter.cpp  ReadFilter.h  ReadPileup.cpp  ReadPileup.h  ReferenceCache.cpp  ReferenceCache.h  SAMRecord.cpp  SAMRecord.h  SimpleInterval.cpp  SimpleInterval.h  StringUtils.cpp  StringUtils.h  main.cpp  (+1 more)
src/Mutect2/: AssemblyResult.cpp  AssemblyResult.h  AssemblyResultSet.cpp  AssemblyResultSet.h  CMakeLists.txt  PreAlleleCollection.h  ReadThreadingAssembler.cpp  ReadThreadingAssembler.h  SomaticGenotypeEngine.cpp  SomaticGenotypeEngine.h  SomaticLikelihoodsEngine.cpp  SomaticLikelihoodsEngine.h
src/Mutect2FilteringEngine/: CMakeLists.txt  ErrorProbabilities.cpp  ErrorProbabilities.h  M2FiltersArgumentCollection.cpp  M2FiltersArgumentCollection.h  Mutect2FilteringEngine.cpp  Mutect2FilteringEngine.h  Mutect2VariantFilter.cpp  Mutect2VariantFilter.h  StrandArtifactFilter.cpp  StrandArtifactFilter.h  TumorEvidenceFilter.cpp  TumorEvidenceFilter.h
src/annotator/: BaseQuality.cpp  BaseQuality.h  CMakeLists.txt  DepthPerAlleleBySample.cpp  DepthPerAlleleBySample.h  DepthPerSampleHC.cpp  DepthPerSampleHC.h  FragmentLength.cpp  GenotypeAnnotation.cpp  GenotypeAnnotation.h  InfoFieldAnnotation.cpp  InfoFieldAnnotation.h  OrientationBiasReadCounts.cpp  OrientationBiasReadCounts.h  PerAlleleAnnotation.cpp  PerAlleleAnnotation.h  PreAlleleAnnotation.cpp  PreAlleleAnnotation.h  ReadPosRankSumTest.h  StrandBiasBySample.cpp  StrandBiasBySample.h  StrandBiasTest.cpp  TandemRepeat.cpp  TandemRepeat.h  VaraintAnnotatiorEngine.cpp  VaraintAnnotatiorEngine.h  VariantAnnotatorEngine.cpp  VariantAnnotatorEngine.h
src/basicshortmutpileup/: ArithmeticUtils.cpp  ArithmeticUtils.h  BetaBinomialDistribution.cpp  BetaBinomialDistribution.h  CombinatoricsUtils.cpp
src/cache/: DigammaCache.cpp  DigammaCache.h  IntToDoubleFunctionCache.cpp  IntToDoubleFunctionCache.h  Log10FactorialCache.h
src/cigar/: CMakeLists.txt  Cigar.cpp  Cigar.h  CigarOperator.cpp  CigarOperator.h
src/clipping/: CMakeLists.txt  ClippingOp.cpp  ClippingOp.h  ReadClipper.cpp  ReadClipper.h
src/clustering/: AlleleFractionCluster.h  BetaBinomialCluster.cpp  BetaBinomialCluster.h  BetaDistributionShape.cpp  BetaDistributionShape.h  BinomialDistribution.cpp  BinomialDistribution.h  CMakeLists.txt  SequencingError.cpp  SequencingError.h  SomaticClusteringModel.cpp  SomaticClusteringModel.h
src/collection/: IndexedAlleleList.h  IndexedSet.h
src/engine/: AlignmentContext.cpp  AlignmentContext.h  ReferenceContext.cpp  ReferenceContext.h
src/filtering/: BaseQualityFilter.cpp  BaseQualityFilter.h  CMakeLists.txt  ClusteredEventsFilter.cpp  ClusteredEventsFilter.h  DuplicatedAltReadFilter.cpp  DuplicatedAltReadFilter.h  FilterMutectCalls.cpp  FilterMutectCalls.h  FilteredHaplotypeFilter.cpp  FilteredHaplotypeFilter.h  FragmentLengthFilter.cpp  FragmentLengthFilter.h  GermlineFilter.cpp  GermlineFilter.h  M2FiltersArgumentCollection.cpp  M2FiltersArgumentCollection.h  MappingQualityFilter.cpp  MappingQualityFilter.h  MinAlleleFractionFilter.cpp  MinAlleleFractionFilter.h  MultiallelicFilter.cpp  MultiallelicFilter.h  Mutect2FilteringEngine.cpp  Mutect2FilteringEngine.h  Mutect2VariantFilter.cpp  Mutect2VariantFilter.h  NRatioFilter.cpp  NRatioFilter.h  NormalArtifactFilter.cpp  NormalArtifactFilter.h  PanelOfNormalsFilter.cpp  PanelOfNormalsFilter.h  PolymeraseSlippageFilter.cpp  PolymeraseSlippageFilter.h  ReadPositionFilter.cpp  ReadPositionFilter.h  StrandArtifactFilter.cpp  StrandArtifactFilter.h  ThresholdCalculator.cpp  (+3 more)
src/graph/: BaseEdge.cpp  BaseEdge.h  BaseVertex.cpp  BaseVertex.h  CMakeLists.txt  DanglingChainMergeHelper.h  KBestHaplotype.cpp  KBestHaplotype.h  KBestHaplotypeFinder.cpp  KBestHaplotypeFinder.h  Kmer.cpp  Kmer.h  MultiDeBruijnVertex.cpp  MultiDeBruijnVertex.h  MultiSampleEdge.cpp  MultiSampleEdge.h  ReadThreadingAssembler.cpp  ReadThreadingAssembler.h  ReadThreadingGraph.cpp  ReadThreadingGraph.h  SeqGraph.cpp  SeqGraph.h  SeqVertex.cpp  SeqVertex.h
src/graph/BaseGraph/: BaseGraphIterator.h  DFS_CycleDetect.h  DirectedEdgeContainer.h  DirectedSpecifics.cpp  DirectedSpecifics.h  Specifics.h
src/graph/set/: ArraySet.cpp  ArraySet.h
src/graph/utils/: CommonSuffixSplitter.cpp  CommonSuffixSplitter.h  GraphUtils.cpp  GraphUtils.h  MergeCommonSuffices.cpp  MergeCommonSuffices.h  MergeDiamonds.cpp  MergeDiamonds.h  MergeTails.cpp  MergeTails.h  SharedSequenceMerger.cpp  SharedSequenceMerger.h  SharedVertexSequenceSplitter.cpp  SharedVertexSequenceSplitter.h  SplitCommonSuffices.cpp  SplitCommonSuffices.h  VertexBasedTransformer.cpp  VertexBasedTransformer.h
src/haplotype/: Allele.cpp  Allele.h  CMakeLists.txt  EventMap.cpp  EventMap.h  Haplotype.cpp  Haplotype.h
src/haplotypecaller/: AssemblyBasedCallerUtils.cpp  AssemblyBasedCallerUtils.h  AssemblyRegionTrimmer.cpp  AssemblyRegionTrimmer.h  AssemblyRegionTrimmer_Result.cpp  AssemblyRegionTrimmer_Result.h  CMakeLists.txt  CalledHaplotypes.cpp  CalledHaplotypes.h  LocationAndAlleles.h  PairHMMLikelihoodCalculationEngine.cpp  PairHMMLikelihoodCalculationEngine.h  ReadForPairHMM.cpp  ReadForPairHMM.h  ReadThreadingAssemblerArgumentCollection.h  ReferenceConfidenceModel.cpp  ReferenceConfidenceModel.h
src/model/: model.cpp  model.h
src/param/: CMakeLists.txt  ParamUtils.cpp  ParamUtils.h
src/path/: AdaptiveChainPruner.h  ChainPruner.h  Path.h
src/read/: AlignmentUtils.cpp  AlignmentUtils.h  CMakeLists.txt  CigarUtils.cpp  CigarUtils.h  Fragment.cpp  (+8 more)
(+106 files in other folders)
